--- a/Trivia/index.html
+++ b/Trivia/index.html
@@ -51,16 +51,20 @@
 
 <body>
 
-  <table width="1250" class="table4" >
-    <thead>
+<h1 id="the_end" align="center"></h1>
+
+<table width="1200">
+  <thead>
 
 
-    <tr >
-      <th class="table5">JUGAREMOS PARA LA PROXIMA!!!!</th>
+  <tr >
+    <th id="tableok"></th>
+    <th id="tablewrong"></th>
 
-    </tr>
-      </thead>
-  </table>
+  </tr>
+    </thead>
+</table>
+
 
 
 
