--- a/Trivia/index.html
+++ b/Trivia/index.html
@@ -55,14 +55,21 @@
 
 <table width="1200">
   <thead>
-
-
-  <tr >
+    <tr >
     <th id="tableok"></th>
     <th id="tablewrong"></th>
-
-  </tr>
+</tr>
     </thead>
+<thead>
+
+<tr>
+  <th id="nocorrect"></th>
+  <th id="nowrong"></th>
+</tr>
+
+</thead>
+
+
 </table>
 
 
