--- a/triviarespaldo/index.html
+++ b/triviarespaldo/index.html
@@ -15,7 +15,6 @@
 <tr>
 <th><strong><span id="titulo1">PREGUNTADOS</strong></span></th>
 <script type="text/javascript" src="main.js">
-
     </script>
 <th><p id="usuario">Bienvenida</p></th>
 <th><span id="titulo2"><button onclick="alerta()">Ingresar</button></span></th>
@@ -36,7 +35,7 @@
   <tr >
     <th class="table2">Categoria</th>
     <th class="table2">Categoria</th>
-    <th class="table3">Teconología</th>
+    <th class="table3">Tecnología</th>
     <th class="table2">Categoria</th>
   </tr>
     </thead>
@@ -55,21 +54,46 @@
 
 <table width="1200">
   <thead>
-    <tr >
-    <th id="tableok"></th>
+
+
+  <tr >
+    <th id="tableok">  </th>
+
     <th id="tablewrong"></th>
-</tr>
+
+  </tr>
     </thead>
-<thead>
 
-<tr>
-  <th id="nocorrect"></th>
-  <th id="nowrong"></th>
-</tr>
-
-</thead>
+    <thead>
 
 
+    <tr >
+      <th id="tableFirstRight">  </th>
+
+      <th id="tablefirstWrong"> </th>
+
+    </tr>
+      </thead>
+      <thead>
+
+
+      <tr >
+        <th id="tableSecondRight">  </th>
+
+        <th id="tableSecondWrong"> </th>
+
+      </tr>
+        </thead>
+        <thead>
+
+
+        <tr >
+          <th id="tableThirdRight">  </th>
+
+          <th id="tableThirdWrong"> </th>
+
+        </tr>
+          </thead>
 </table>
 
 
